# ndi-to-osc

./: pyproject.toml
ndi-to-osc/: main.py
ndi_to_osc/: main.py  segments.py  send.py  utils.py
